[project]
name = "pageindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "azure-ai-documentintelligence>=1.0.2",
    "azure-identity>=1.25.2",
    "openai>=2.24.0",
    "pymupdf>=1.27.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "streamlit>=1.40.0",
    "tiktoken>=0.12.0",
]
